Fix button spacing on mobile view

--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -134,5 +134,6 @@
     margin: 36px 0 0;
     width: 100%;
     max-width: 282px;
+    padding: 0;
   }
 }
